--- a/codingApple/1. html/index5.html
+++ b/codingApple/1. html/index5.html
@@ -29,5 +29,41 @@
   <form action="">
     <input>
   </form>
+
+  <div class="contact-background">
+    <div class="contact-main">
+      <form>
+        <h3>contact us</h3>
+
+        <div class="w-100">
+          <p>Your Email</p>
+          <input class="form-input" type="email">
+        </div>
+
+        <div class="w-50">
+          <p>First name</p>
+          <input class="form-input" type="text">
+        </div>
+        <div class="w-50">
+          <p>Last name</p>
+          <input class="form-input" type="text">
+        </div>
+        <div style="clear: both"></div>
+
+        <div class="w-100">
+          <p>Message</p>
+          <textarea class="form-textarea" type="text">123</textarea>
+        </div>
+        <div class="w-100">
+          <input id="sub" class="form-checkbox" type="checkbox">
+          <label for="sub">Subscribe</label>
+          <button class="form-button">SEND</button>
+        </div>
+      </form>
+
+
+
+    </div>
+  </div>
 </body>
 </html>
